# powerliners

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: PORT.md  PORT_CHECKLIST.md  PORT_PLAN.md  hud-static.css  index.html  port_report.html  powerline_py_classes.txt  powerline_py_functions.txt  powerline_py_functions_with_locations.txt  report.html
man/man1/: powerline.1  powerlineall.1
scripts/: extract_py_names.py  gen_port_checklist.py  gen_port_report.py  regen_py_functions.sh  scaffold_mirror.py
src/: lib.rs
src/extensions/: awkrs_rkyv.rs  awkrs_version.rs  aws_ctx.rs  bin_version.rs  bundled_config.rs  diag_log.rs  disk.rs  docker.rs  exec_segment.rs  fusevm_jit.rs  gcp_ctx.rs  git_status.rs  github_ci.rs  gpu.rs  icons.rs  k8s.rs  mem_usage.rs  mod.rs  proc_count.rs  stryke_rkyv.rs  stryke_version.rs  thermal.rs  wthr_extensions.rs  zshrs_rkyv.rs  zshrs_version.rs
src/ported/: colorscheme.rs  config.rs  ipython.rs  lemonbar.rs  mod.rs  pdb.rs  renderer.rs  segment.rs  shell.rs  theme.rs  version.rs  vim.rs
src/ported/bindings/: config.rs  mod.rs
src/ported/bindings/awesome/: powerline-awesome.rs
src/ported/bindings/bar/: powerline-bar.rs
src/ported/bindings/i3/: powerline-i3.rs
src/ported/bindings/ipython/: mod.rs  post_0_11.rs  pre_0_11.rs  since_5.rs  since_7.rs
src/ported/bindings/lemonbar/: powerline-lemonbar.rs
src/ported/bindings/pdb/: __main__.rs  mod.rs
src/ported/bindings/qtile/: mod.rs  widget.rs
src/ported/bindings/tmux/: mod.rs
src/ported/bindings/vim/: mod.rs  powerline.vim
src/ported/bindings/wm/: awesome.rs  mod.rs
src/ported/bindings/zsh/: mod.rs
src/ported/commands/: config.rs  daemon.rs  lemonbar.rs  lint.rs  main.rs  mod.rs
src/ported/lib/: config.rs  debug.rs  dict.rs  encoding.rs  humanize_bytes.rs  inotify.rs  memoize.rs  mod.rs  monotonic.rs  overrides.rs  path.rs  shell.rs  threaded.rs  unicode.rs  url.rs
src/ported/lib/vcs/: bzr.rs  git.rs  mercurial.rs  mod.rs
src/ported/lib/watcher/: inotify.rs  mod.rs  stat.rs  tree.rs  uv.rs
src/ported/lint/: checks.rs  context.rs  imp.rs  inspect.rs  mod.rs  selfcheck.rs  spec.rs
src/ported/lint/markedjson/: composer.rs  constructor.rs  error.rs  events.rs  loader.rs  markedvalue.rs  mod.rs  nodes.rs  parser.rs  reader.rs  resolver.rs  scanner.rs  tokens.rs
src/ported/listers/: i3wm.rs  mod.rs  pdb.rs  vim.rs
src/ported/matchers/: mod.rs
src/ported/matchers/vim/: mod.rs
src/ported/renderers/: i3bar.rs  lemonbar.rs  mod.rs  pango_markup.rs  pdb.rs  tmux.rs  vim.rs
src/ported/renderers/ipython/: mod.rs  pre_5.rs  since_5.rs  since_7.rs
src/ported/renderers/shell/: bash.rs  ksh.rs  mod.rs  rcsh.rs  readline.rs  tcsh.rs  zsh.rs
src/ported/scripts/: mod.rs  powerline_config.rs  powerline_daemon.rs  powerline_lint.rs  powerline_release.rs  powerline_render.rs
src/ported/segments/: i3wm.rs  ipython.rs  mod.rs  pdb.rs  shell.rs  tmux.rs
src/ported/segments/common/: bat.rs  env.rs  mail.rs  mod.rs  net.rs  players.rs  sys.rs  time.rs  vcs.rs  wthr.rs
src/ported/segments/vim/: mod.rs
src/ported/selectors/: mod.rs  vim.rs
tests/: bin_powerline_client.rs  contract_colorscheme_theme.rs  contract_dict_merge_gradient.rs  contract_round4_misc.rs  daemon_e2e.rs  daemon_fuzz.rs  daemon_parity.rs  daemon_stress.rs  lib_edge_cases_boundary.rs  lib_edge_cases_round5.rs  lib_strwidth_fallback.rs  parity_against_upstream.rs  ported_fn_names_match_py.rs  vim_e2e.rs
tests/data/: fake_fn_allowlist.txt
tests/data/e2e/scenario_alias_chain/: colors.json
tests/data/e2e/scenario_both_sides/: colors.json
tests/data/e2e/scenario_cterm_only/: colors.json
tests/data/e2e/scenario_date/: colors.json
tests/data/e2e/scenario_default_colors/: colors.json
tests/data/e2e/scenario_divider_hl/: colors.json
(+109 files in other folders)
