[package]
name = "powerliners"
version = "0.0.4"
edition = "2021"
description = "1:1 Rust port of powerline/powerline. The ultimate statusline/prompt utility."
license = "MIT"
authors = ["MenkeTechnologies <linux.dev25@gmail.com>"]
repository = "https://github.com/MenkeTechnologies/powerliners"
readme = "README.md"

[lib]
name = "powerliners"
path = "src/lib.rs"

[dependencies]
# Carefully chosen for the "endgame" durability bar: foundational crates only.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"          # active fork of serde_yaml
regex = "1"
libc = "0.2"
log = "0.4"

[dev-dependencies]
walkdir = "2"
