[package]
name = "powerliners"
version = "0.0.8"
edition = "2021"
description = "1:1 Rust port of powerline/powerline. The ultimate statusline/prompt utility."
license = "MIT"
authors = ["MenkeTechnologies <linux.dev25@gmail.com>"]
repository = "https://github.com/MenkeTechnologies/powerliners"
readme = "README.md"

# Exclude development-only directories from the published crate.
# - vendor/    upstream powerline-status checkout (parity-test fixture)
# - tests/    integration tests (lib unit tests live in src/)
# - docs/     HTML / Markdown reports — repo-local, not crate API
# - scripts/  Python codegen + audit-tool scripts (not Rust source)
# - .github/  CI config
exclude = [
    "vendor/**",
    "tests/**",
    "docs/**",
    "scripts/**",
    ".github/**",
]

[lib]
name = "powerliners"
path = "src/lib.rs"

[dependencies]
# Carefully chosen for the "endgame" durability bar: foundational crates only.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"          # active fork of serde_yaml
regex = "1"
libc = "0.2"
log = "0.4"

[dev-dependencies]
walkdir = "2"
