[package]
name = "powerliners"
version = "0.2.8"
edition = "2021"
description = "1:1 Rust port of powerline/powerline. The ultimate statusline/prompt utility"
license = "MIT"
authors = ["MenkeTechnologies <linux.dev25@gmail.com>"]
repository = "https://github.com/MenkeTechnologies/powerliners"
homepage = "https://menketechnologies.github.io/powerliners/"
documentation = "https://docs.rs/powerliners"
keywords = ["powerline", "tmux", "zsh", "statusline", "prompt"]
categories = ["command-line-utilities"]
readme = "README.md"

# Exclude development-only directories from the published crate.
# - vendor/    upstream powerline-status checkout (parity-test fixture)
# - tests/    integration tests (lib unit tests live in src/)
# - docs/     HTML / Markdown reports — repo-local, not crate API
# - scripts/  Python codegen + audit-tool scripts (not Rust source)
# - .github/  CI config
exclude = [
    "vendor/**",
    "tests/**",
    "docs/**",
    "scripts/**",
    ".github/**",
]

[lib]
name = "powerliners"
path = "src/lib.rs"

# Explicit binaries so cargo install / cargo publish ship the full
# upstream-equivalent CLI surface.
[[bin]]
name = "powerline"
path = "src/bin/powerline.rs"

[[bin]]
name = "powerline-daemon"
path = "src/bin/powerline-daemon.rs"

[[bin]]
name = "powerline-config"
path = "src/bin/powerline-config.rs"

[[bin]]
name = "powerline-render"
path = "src/bin/powerline-render.rs"

[[bin]]
name = "powerline-lint"
path = "src/bin/powerline-lint.rs"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[dependencies]
# Carefully chosen for the "endgame" durability bar: foundational crates only.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"          # active fork of serde_yaml
regex = "1"
libc = "0.2"
log = "0.4"
ureq = { version = "3", features = ["json", "rustls"], default-features = false }

[dev-dependencies]
walkdir = "2"
tempfile = "3"
